--- a/src/pages/DisplayStudents.css
+++ b/src/pages/DisplayStudents.css
@@ -1,4 +1,4 @@
-.content {
+.content-all{
   margin-top: 3vh;
 }
 
@@ -21,7 +21,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 7vw;
+  width: clamp(95px,10vw,110px);
   }
 #display-students-parent-button{
   width: clamp(95px,10vw,110px);
@@ -78,6 +78,9 @@
   width: max-content;
   /* color: #05342f; */
   color: var(--text-color);
+  bottom: 0;
+    inline-size: -webkit-fill-available;
+    position: absolute;
 }
 
 .ion-page {
